Reverting to prev direct message logic