@@ -60,8 +60,9 @@ public class ChatWebSocketHandlerMessaging extends TextWebSocketHandler{
   public void afterConnectionEstablished(@NonNull WebSocketSession session) throws Exception {
     Map<String, String> params = parseQueryParams(session);
     String senderEmail = params.get("senderEmail");
+    String receiverEmail = params.get("receiverEmail");
 
-    if (senderEmail == null || senderEmail.isBlank()) {
+    if (senderEmail == null) {
       sendSystemMessage(session, "Missing senderEmail in connection URL");
       session.close(CloseStatus.BAD_DATA);
       return;
@@ -73,26 +74,39 @@ public class ChatWebSocketHandlerMessaging extends TextWebSocketHandler{
       return;
     }
 
-    Map<String, String> meta = Map.of("senderEmail", senderEmail);
-
     activeUsers.put(senderEmail, session);
-    sessionMetadata.put(session, meta);
+    sessionMetadata.put(session, params);
     sendSystemMessage(session, "Connected as " + senderEmail);
 
     processUnreadMessages(session, senderEmail);
+
+    if (receiverEmail != null) {
+
+      if (userRepository.findByEmail(receiverEmail).isEmpty()) {
+        sendSystemMessage(session, "Receiver not found.");
+        session.close(CloseStatus.BAD_DATA);
+        return;
+      }
+
+      if (!friendService.areFriends(senderEmail, receiverEmail)) {
+        sendSystemMessage(session, "You can only chat with friends.");
+        session.close(CloseStatus.NOT_ACCEPTABLE);
+        return;
+      }
+    }
+
+    if (receiverEmail != null) {
+      processHistoryForReceiver(session, senderEmail, receiverEmail);
+    }
   }
 
   private void processUnreadMessages(WebSocketSession session, String senderEmail) throws Exception {
     List<Message> unread = messageService.getUnreadMessages(senderEmail);
-    if (unread == null || unread.isEmpty()) {
-      return;
-    }
+    if (unread == null || unread.isEmpty()) return;
 
     List<Map<String, Object>> formatted = new ArrayList<>();
     for (Message message : unread) {
-      if (shouldHideForRequester(message, senderEmail)) {
-        continue;
-      }
+      if (shouldHideForRequester(message, senderEmail)) continue;
       Map<String, Object> payload = buildPayload(message);
       payload.put("optimistic", false);
       addPreviewIfFile(payload, message.getType(), message.getFileKey());
@@ -111,23 +125,19 @@ public class ChatWebSocketHandlerMessaging extends TextWebSocketHandler{
   private void processHistoryForReceiver(WebSocketSession session, String senderEmail, String receiverEmail) throws Exception {
 
     List<Message> dbMessages = messageService.getChat(senderEmail, receiverEmail);
-    if (dbMessages == null) {
-      dbMessages = Collections.emptyList();
-    }
+    if (dbMessages == null) dbMessages = Collections.emptyList();
 
     List<Message> pending = messageQueueService.getPendingForChat(senderEmail, receiverEmail);
-    if (pending == null) {
-      pending = Collections.emptyList();
-    }
+    if (pending == null) pending = Collections.emptyList();
 
     List<Message> filteredDb = dbMessages.stream()
             .filter(m -> !shouldHideForRequester(m, senderEmail))
             .filter(m -> m.getDeletedAt() == null)
-            .toList();
+            .collect(Collectors.toList());
 
     List<Message> filteredPending = pending.stream()
             .filter(m -> !shouldHideForRequester(m, senderEmail))
-            .toList();
+            .collect(Collectors.toList());
 
     List<Map<String, Object>> formatted = new ArrayList<>();
 
@@ -155,9 +165,7 @@ public class ChatWebSocketHandlerMessaging extends TextWebSocketHandler{
   }
 
   private boolean shouldHideForRequester(Message m, String requesterEmail) {
-    if (m == null || requesterEmail == null) {
-      return false;
-    }
+    if (m == null || requesterEmail == null) return false;
     if (requesterEmail.equalsIgnoreCase(m.getSenderEmail()) && Boolean.TRUE.equals(m.getSenderDeleted())) {
       return true;
     }
@@ -165,7 +173,8 @@ public class ChatWebSocketHandlerMessaging extends TextWebSocketHandler{
     if (requesterEmail.equalsIgnoreCase(m.getReceiverEmail()) && Boolean.TRUE.equals(m.getReceiverDeleted())) {
       return true;
     }
-    return m.getDeletedAt() != null;
+    if (m.getDeletedAt() != null) return true;
+    return false;
   }
 
   private void sendChatSummary(WebSocketSession session, String senderEmail) throws Exception {
@@ -197,42 +206,30 @@ public class ChatWebSocketHandlerMessaging extends TextWebSocketHandler{
 
   @Override
   protected void handleTextMessage(@NonNull WebSocketSession session, @NonNull TextMessage textMessage)
-    throws Exception {
+          throws Exception {
 
     Map<String, String> meta = sessionMetadata.get(session);
     if (meta == null) {
+      sendSystemMessage(session, "Session metadata missing. Reconnect required.");
       return;
     }
 
     String senderEmail = meta.get("senderEmail");
+    String receiverEmail = meta.get("receiverEmail");
 
     Map<String, Object> clientPayload = objectMapper.readValue(textMessage.getPayload(), new TypeReference<>() {});
     String type = (String) clientPayload.getOrDefault("type", "MESSAGE");
-    String receiverEmail = (String) clientPayload.get("receiverEmail");
-
-    if ((type.equalsIgnoreCase("FILE") || type.equalsIgnoreCase("MESSAGE")) &&
-      (receiverEmail == null || receiverEmail.isBlank())) {
-      sendSystemMessage(session, "Message payload missing 'receiverEmail'.");
-      return;
-    }
 
     switch (type.toUpperCase()) {
       case "FILE" -> handleFileMessage(senderEmail, receiverEmail, clientPayload);
       case "DELETE" -> handleDeleteMessage(senderEmail, receiverEmail, clientPayload);
       case "READ" -> handleReadMessages(clientPayload);
       case "SUMMARY" -> sendChatSummary(session, senderEmail);
-      case "HISTORY" -> {
-        String chatPartner = (String) clientPayload.get("chatPartner");
-        if (chatPartner != null) {
-          processHistoryForReceiver(session, senderEmail, chatPartner);
-        }
-      }
       default -> handleTextOnlyMessage(senderEmail, receiverEmail, clientPayload);
     }
   }
 
-  private void handleTextOnlyMessage(String senderEmail, String receiverEmail, Map<String, Object> payload)
-    throws IOException {
+  private void handleTextOnlyMessage(String senderEmail, String receiverEmail, Map<String, Object> payload) throws IOException {
 
     if (!friendService.areFriends(senderEmail, receiverEmail)) {
       throw new RuntimeException("Cannot message non-friends.");
@@ -255,8 +252,7 @@ public class ChatWebSocketHandlerMessaging extends TextWebSocketHandler{
     sendToUsers(Set.of(receiverEmail), sendPayload);
   }
 
-  private void handleFileMessage(String senderEmail, String receiverEmail, Map<String, Object> payload)
-    throws IOException {
+  private void handleFileMessage(String senderEmail, String receiverEmail, Map<String, Object> payload) throws IOException {
 
     if (!friendService.areFriends(senderEmail, receiverEmail)) {
       throw new RuntimeException("Cannot message non-friends.");
@@ -371,9 +367,7 @@ public class ChatWebSocketHandlerMessaging extends TextWebSocketHandler{
         epochMillis = ts.atZone(ZoneId.systemDefault()).toInstant().toEpochMilli();
       }
     }
-    catch (Exception ignored) {
-      epochMillis = Instant.now().toEpochMilli();
-    }
+    catch (Exception ignored) { epochMillis = Instant.now().toEpochMilli(); }
     payload.put("timestamp", epochMillis);
 
     payload.put("readStatus", message.getReadStatus());
